# Fusion

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  check_libffi.sh  cmake_install.cmake  cuda.fusion  env_local_deps.sh  example.fusion  example_points.fusion  fusion-design-document.md  make.sh  moon.csv  setup.sh  test.fusion  test.sh  train_moons.fusion
cmake/: DownloadLLVM.cmake  FindFusionCURL.cmake  FindFusionLibFFI.cmake  FusionLLVMComponents.cmake  FusionLLVMExtraLibs.cmake  FusionRuntime.cmake  LinkFusionLLVM.cmake  PatchLLVMExportsMissingFiles.cmake  SanitizeLLVMLibs.cmake
compiler/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
compiler/src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  codegen_pch.hpp  layout.cpp  layout.hpp  lexer.cpp  lexer.hpp  main.cpp  multifile.cpp  multifile.hpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp
examples/cuda/: cuda.fusion
examples/functions/: pointers.fusion  structs.fusion
examples/io/: README.md  example_io.fusion  file_read.fusion  file_write.fusion  http_example.fusion  print.fusion  roundtrip.fusion  stdin.fusion  string_conversion.fusion
examples/microgpt/: README.md  autograd.fusion  gpt.fusion  microgpt.fusion  names.fusion  rand.fusion  value.fusion
examples/micrograd/: autograd.fusion  bmp.fusion  moons.fusion  rand.fusion  train.fusion  value.fusion
examples/moons/: autograd.fusion  bmp.fusion  moons.fusion  rand.fusion  train.fusion  train_moons.fusion  value.fusion
examples/requests/: example_dot_com.fusion
examples/stdlib_import/: map_test.fusion  math_import.fusion  math_test.fusion  set_test.fusion  vec_test.fusion
examples/structs/: user.fusion
examples/tui/: main.fusion  spinning_cube.fusion  tui.fusion
examples/vector_lib/: main.fusion  vec.fusion
lsp/: CMakeLists.txt
lsp/src/: analysis.cpp  analysis.hpp  features.cpp  features.hpp  index.cpp  index.hpp  main.cpp  protocol.hpp  server.cpp  server.hpp  transport.cpp  transport.hpp
lsp/tests/: CMakeLists.txt  test_server.cpp
runtime_c/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
runtime_c/include/: runtime.h
runtime_c/src/: dl.c  ffi.c  ffi_stub.c  http.c  stub.c
skills/: fusion-compiler.md  fusion-lang.md  fusion-lsp.md
stdlib/: map.fusion  math.fusion  set.fusion  vec.fusion
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  fusion_tests.cpp  test_runner.c
tests/common/: test_utils.cpp  test_utils.h
tests/compiler/: test_codegen.cpp  test_compiler.cpp  test_jit.cpp  test_layout.cpp  test_lexer.cpp  test_multifile.cpp  test_parser.cpp  test_sema.cpp
tests/data/: libfusion_phase6.c  test.fusion
tests/runtime/: test_runtime_basic.cpp  test_runtime_dl.cpp  test_runtime_ffi.cpp
vscode-fusion/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-fusion/src/: extension.ts
vscode-fusion/syntaxes/: fusion.tmLanguage.json
