include("${CMAKE_SOURCE_DIR}/cmake/FindFusionLibFFI.cmake")

set(RUNTIME_FFI_SOURCES src/ffi.c)

include("${CMAKE_SOURCE_DIR}/cmake/FusionRuntime.cmake")

set(RUNTIME_SOURCES src/stub.c src/dl.c ${RUNTIME_FFI_SOURCES})
if(FUSION_CURL_FOUND)
  list(APPEND RUNTIME_SOURCES src/http.c)
endif()

add_library(runtime SHARED ${RUNTIME_SOURCES})
target_include_directories(runtime PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
fusion_runtime_libffi(runtime)
target_link_libraries(runtime PRIVATE ${CMAKE_DL_LIBS})
if(FUSION_CURL_FOUND)
  target_link_libraries(runtime PRIVATE ${FUSION_CURL_TARGET})
  if(FUSION_CURL_INCLUDE_DIR)
    target_include_directories(runtime PRIVATE ${FUSION_CURL_INCLUDE_DIR})
  endif()
endif()
set_target_properties(runtime PROPERTIES OUTPUT_NAME runtime PREFIX "lib")

add_library(runtime_static STATIC ${RUNTIME_SOURCES})
target_include_directories(runtime_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
fusion_runtime_libffi(runtime_static)
target_link_libraries(runtime_static PRIVATE ${CMAKE_DL_LIBS})
if(FUSION_CURL_FOUND)
  target_link_libraries(runtime_static PRIVATE ${FUSION_CURL_TARGET})
  if(FUSION_CURL_INCLUDE_DIR)
    target_include_directories(runtime_static PRIVATE ${FUSION_CURL_INCLUDE_DIR})
  endif()
endif()
set_target_properties(runtime_static PROPERTIES OUTPUT_NAME runtime PREFIX "lib")
